[e2e] Implement Qase.io integration (#2233)
* qase.io integration
moved all helpers/util to main/java

* fix for locator (message/content)

* fix for locator (message/content) v2

* refactoring due to review

* refactoring, added verification by @CaseId

* small fix with NullPointer

* TEST FAILED RUN

* TEST FAILED RUN2

* TEST FAILED RUN3

* removed token, set correct @CaseId

* added status SKIPED for manual tests or not automated
changed getting token .getenv

* fix for token

* changed cases limit to 100

* fix for getting token

* refactoring due review

* changed name of variable

Co-authored-by: Roman Zabaluev <rzabaluev@provectus.com>